[tool.poetry]
name = "sqlalchemy_bundle_model"
version = "0.2.0"
description = "An extension to SQLAlchemy to treat aggregated columns and clauses as Models"
authors = ["Yuichiro Smith <contact@yu-smith.com>"]
readme = "README.md"
license = "Apache Licence 2.0"
repository = "https://github.com/yu-ichiro/sqlalchemy_bundle_model"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Topic :: Software Development :: Libraries",
    "Topic :: Database",
    "Typing :: Typed",
]

[tool.poetry.dependencies]
python = "^3.6"
SQLAlchemy = ">=1.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
